dark mode fixed

--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -3,6 +3,7 @@
   text-align: center;
 }
 
+/* PC - LAPTOP OR DESKTOP */
 .h1-green-left {
   padding-left: 10px;
   padding-bottom: 5px;
@@ -193,10 +194,6 @@ li img {
   cursor: pointer;
   max-width: 800px;
   border-radius: 10px;
-}
-
-.home-mid img:hover {
-  opacity: 0.5;
 }
 
 .home-mid-textbox-container {
@@ -419,6 +416,7 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+/* MOBILE - TABLET */
 @media screen and (max-width: 1180px) {
   .navbar-container {
     width: 100%;
@@ -539,6 +537,14 @@ input:checked + .slider:before {
   }
 }
 
+/* ONLY PC */
+@media (hover: hover) {
+  .home-mid img:hover {
+    opacity: 0.5;
+  }
+}
+
+/* MOBILE - SMARTPHONE */
 @media screen and (max-width: 767px) {
   .navbar-container {
     width: 100%;
